textures/style.css
#container{
				position: relative;
			}

			#sticky {
			    padding: 0.5ex;
			    width: 100%;
			    background-color: black;
			    color: #fff;
			    font-size: 2em;
			    position: absolute;
			}

			#sticky.stick {
			    margin-top: 0 !important;
			    position: fixed;
			    top: 0;
			    z-index: 10000;
			}

			.icon{
				margin-right: 5px;
				position: relative;
				right:-34%;
			}

			#toowide{
				width: 100%;
				height: 2000px;
			}

			.rightSkew{
				transform: skewY(-3deg) translateX(0%);
				background-color: black;
				height: 85px;
				width: 100%;
				position: relative;
				top: 50px;
			}

			.rightSkewLine{
				transform: skewY(-3deg) translateX(0%);
				background-color: black;
				height: 20px;
				width: 100%;
				position: relative;
				top: 60px;
			}

			.leftSkew{
				transform: skewY(3deg) translateX(0%);
				background-color: black;
				height: 85px;
				width: 100%;
				position: relative;
				top: -50px;
			}

			.leftSkewLine{
				transform: skewY(3deg) translateX(0%);
				background-color: black;
				height: 20px;
				width: 100%;
				position: relative;
				top: -40px;
				
			}

				

			.parallax-container {
		      	height: "your height here";
		    }

		    #bigLogo{
		    	position: fixed;
		    	top: 41px;
		    	left: 12.8%;
		    	
		    	/*left:50px;*/

		    }

		    #navBarLogo{
		    	left:9.7%;
		    	position:relative;
		    	margin-top: 20px;
		    }

		    .header{
		    	
				font-family: 'Unica One', cursive;
				font-size: 500%;
				text-align: center;
				color: black;
		    }

		    .header1{
		    	
				font-family: 'Unica One', cursive;
				font-size: 500%;
				text-align: center;
				color: white;
				background-color: black;
				width:110%;
				position:relative;
				left:-5%;
		    }

		    .writting{
		    	
				font-family: 'Jura', sans-serif;
				font-size: 20px;

		    }

		    .writting1{
		    	
				font-family: 'Jura', sans-serif;
				font-size: 20px;
				text-align: left;
				
		    }

		    .writting2{
		    	
				font-family: 'Jura', sans-serif;
				font-size: 10px;
				color: white;
				padding-top: 40px;

		    }
		    

		    .aboutIcons{
		    	height:45%;
		    	width:45%;
		    	text-align: center;
		    	margin-bottom: 20px;
		    	margin-left: 27%;


		    }

		    p{
		    	text-align: center;
		    }

		    .modalHeader{
		    	font-family: 'Unica One', cursive;
		    	font-size: :300%;
		    }


		    #parallax-2-gif{
		    	position: absolute;
		    	height: 200%;

		    	
		    }

		    .devSkillsIcon{
		    	height:60%;
		    	width:60%;
		    	position: relative;
		    	left: 5%;
		    	
		    }

		    .modal{
		    	background-color: white;
		    	height:600px
		    }

		    #aboutPic{
		    	height:350px;
		    	margin-top: 100px;
		    	border-style: solid;
		    	border-width: 3px;
		    }


		    #dataAnalysis{
		    	height:300px;
		    }

		    #artProject{
		    	position: relative;
		    }

		    .trendsIcon{
		    	height: 70px;
		    }

		    .filler{
		    	height:70px;
		    	background-color: black;
		    }

		    #fillerBottom{
		    	height:90px;
		    	background-color: black;
		    }

		    .projectPic{
		    	height:220px;
		    	width: 100%;
		    }
			
			.projectPicTitle{
				background-color: black;
				position: relative;
				color: white;
				top: -60px;

			}

